--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-simplex
+theme: jekyll-theme-minimal
 title: Videoke Party Maker
 description: For the latest news. Keep an eye on this page!
